<resources>
    <string name="app_name">Trend</string>
    <string name="quantity">Quantity</string>
    <string name="paynow">PAY NOW</string>
    <string name="addcart">ADDCART</string>

    <string name="et_cuslogin_username">Username</string>
    <string name="et_cuslogin_Password">Password</string>
    <string name="tv_cuslogin_forget_pw">Forget Password?</string>
    <string name="bt_cuslogin_login">Login</string>
    <string name="tv_cuslogin_signup">Sign Up</string>
    <string name="tv_cuslogin_log_as_admin">Login as an Admin</string>
    <string name="et_cusprofile_name">Name</string>
    <string name="et_cusprofile_email">Email</string>
    <string name="et_cusprofile_address">Address</string>
    <string name="et_cusprofile_phone">Phone No</string>
    <string name="rb_cusprofile_male">Male</string>
    <string name="rb_cusprofile_female">Female</string>
    <string name="et_cusprofile_pw">Password</string>
    <string name="bt_cusprofile_submit">Submit</string>
    <string name="et_profileup_name">Name</string>
    <string name="et_profileup_email">Email</string>
    <string name="et_profileup_phone">Phone No</string>
    <string name="rb_profileup_male">Male</string>
    <string name="rb_profileup_female">Female</string>
    <string name="et_profileup_cupw">Currunt Password</string>
    <string name="et_profileup_newpw">New Password</string>
    <string name="et_profileup_repw">Re-enter new Password</string>
    <string name="et_adminlog_uname">Username</string>
    <string name="et_adminlog_pw">Password</string>
    <string name="bt_adminlog_login">login</string>
    <string name="title_activity_add_items">Add_items</string>
    <string name="bt_profileup_update">Update</string>
    <string name="bt_profileup_delete">Delete</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="et_additem_name">Item Name</string>
    <string name="et_additem_Price">Item Price</string>
    <string name="tv_additem_addimg">Add image of Item</string>
    <string name="et_additem_about">About Item</string>
    <string name="bt_additem_confirm">CONFIRM</string>
    <string name="tv_upitme">Update Item</string>
    <string name="et_upitme_name">Item Price</string>
    <string name="et_upitme_price">Item Price</string>
    <string name="tv_upitme_addimg">Add Image of Item</string>
    <string name="et_upitme_about">About Item</string>
    <string name="bt_upitme_update">UPDATE</string>
    <string name="tv_viewit">View Added Items</string>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="spinner">Choose Type</string>
    <string name="nameReg" />
    <string name="phoneReg">Phone</string>
    <string name="btsearch">Search</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="rename">Name</string>
    <string name="e_mail">e mail</string>
    <string name="phone">Phone</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="regname">Name</string>
    <string name="foname">Name</string>
    <string name="string_name">Name</string>
    <string name="profile">Profile</string>
    <string name="pc_mart">PC Mart</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="id_txt" />
    <string name="id_txt1">Add title of product</string>
    <string name="id_text">Name of your item</string>
    <string name="etDiscription">Description</string>
    <string name="etDescription">Description</string>
    <string name="btn">submit</string>
    <string name="btn1">Delete</string>
    <string name="inputText1">Enter your Item Name</string>
    <string name="start_selling_a_product">Start Selling a Product</string>
    <string name="price">price</string>
    <string name="image">image</string>
    <string name="id_btn">delete</string>
    <string name="id_txtvl">add description</string>
    <string name="id_name">username</string>
    <string name="et_titleF">Add title here</string>
    <string name="et_descriptionF">Item Description</string>
    <string name="et_price">Price</string>
    <string name="et_contactF">contact number</string>
    <string name="et_btnF">List</string>
    <string name="btnvl1">Submit</string>
    <string name="btnvl2">Delete Listed</string>
    <string name="textView1">Add your images</string>
    <string name="cashon">cashon</string>
    <string name="craditcard">Carditcard</string>
    <string name="cashond">Cashondelivary</string>
    <string name="cardnumber">Card Number</string>
    <string name="ownername">Owner name</string>
    <string name="expiredate">Expire date</string>
    <string name="postcord">Post cord</string>
    <string name="viwedetails">Viwedetails</string>
    <string-array name="usertype">
        <item>User</item>
        <item>Seller</item>
    </string-array>
</resources>