<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".userManage.Admin_login">

    <TextView
        android:id="@+id/tv_adminlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Mobile House"
        android:textColor="#1f4287"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="142dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_adminlog"
        app:srcCompat="@drawable/admin_login" />

    <EditText
        android:id="@+id/et_adminlog_uname"
        android:layout_width="341dp"
        android:layout_height="45dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/et_adminlog_uname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/et_adminlog_pw"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/et_adminlog_pw"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adminlog_uname" />

    <TextView
        android:id="@+id/tv_adminlog_forgetpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Forget Password?"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_adminlog_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adminlog_pw"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/bt_adminlog_login"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:text="@string/bt_adminlog_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adminlog_pw" />
</androidx.constraintlayout.widget.ConstraintLayout>